# dsm

./: .gitignore  CMakeLists.txt  Dependencies.md  LICENSE.txt  README.md
Evaluation/: evaluate_ate_scale.py
Examples/: CMakeLists.txt
Examples/EurocData/: calib0.txt  calib1.txt  settings.txt
Examples/EurocData/Timestamps/: MH_01_easy.txt  MH_02_easy.txt  MH_03_medium.txt  MH_04_difficult.txt  MH_05_difficult.txt  V1_01_easy.txt  V1_02_medium.txt  V1_03_difficult.txt  V2_01_easy.txt  V2_02_medium.txt  V2_03_difficult.txt
Examples/EurocExample/: CMakeLists.txt  main.cpp
Examples/TUMVIData/: calib0_1024.txt  calib0_512.txt  calib1_1024.txt  calib1_512.txt  settings.txt  tum-vi_run_all.py
Examples/TUMVIData/TimeStamps/: room1.txt  room2.txt  room3.txt  room4.txt  room5.txt  room6.txt
Examples/VideoExample/: CMakeLists.txt  main.cpp
QtVisualizer/: CMakeLists.txt
QtVisualizer/src/: GLDrawings.cpp  GLDrawings.h  GLWidget.cpp  GLWidget.h  KeyframeVisualizer.cpp  KeyframeVisualizer.h  MouseInterface.cpp  MouseInterface.h  QtVisualizer.cpp  QtVisualizer.h  QtVisualizerLib.cpp  QtVisualizerLib.h  QtWindow.cpp  QtWindow.h  qtwindow.qrc  qtwindow.ui
dsm/: CMakeLists.txt
dsm/cmake/: BuildFlags.cmake  BuildFlags.h.in  CompilerFlags.cmake
dsm/src/DataStructures/: ActivePoint.cpp  ActivePoint.h  AffineLight.cpp  AffineLight.h  CandidatePoint.cpp  CandidatePoint.h  CovisibilityGraph.cpp  CovisibilityGraph.h  Frame.cpp  Frame.h  GradientPyramid.h  ImagePyramid.h  Pattern.cpp  Pattern.h  Visibility.h
dsm/src/FullSystem/: DSMLib.cpp  DSMLib.h  DistanceTransform.cpp  DistanceTransform.h  FullSystem.cpp  FullSystem.h  LMCW.cpp  LMCW.h  Log.cpp  Log.h  PointDetector.cpp  PointDetector.h
dsm/src/Initializer/: ModelSelector.cpp  ModelSelector.h  MonoInitializer.cpp  MonoInitializer.h
dsm/src/LeastSquares/: IParameterBlock.h  IResidualBlock.cpp  IResidualBlock.h  LeastSquaresProblem.cpp  LeastSquaresProblem.h
dsm/src/Memory/: Buffer.h  BufferPool.h
dsm/src/Optimization/: FrameParameterBlock.cpp  FrameParameterBlock.h  PhotometricBA.cpp  PhotometricBA.h  PhotometricBAConfig.cpp  PhotometricBAConfig.h  PhotometricBAIterationCallback.cpp  PhotometricBAIterationCallback.h  PhotometricResidual.cpp  PhotometricResidual.h  PointParameterBlock.cpp  PointParameterBlock.h
dsm/src/OptimizationStructures/: MatrixBlock.h  MatrixBlock.hpp  MatrixBlock_8_8.hpp  VectorBlock.h  VectorBlock.hpp  VectorBlock_8.hpp
dsm/src/Statistics/: BetaFunction.cpp  BetaFunction.h  IDistribution.cpp  IDistribution.h  NelderMead.cpp  NelderMead.h  RobustNormalDistribution.cpp  RobustNormalDistribution.h  Statistics.h  TDistribution.cpp  TDistribution.h  Tail.h
dsm/src/Thread/: WorkerThread.h  WorkerThreadPool.h
dsm/src/Tracking/: FrameTracker.cpp  FrameTracker.h  FrameTrackerProblem.cpp  FrameTrackerProblem.h  FrameTrackerReference.cpp  FrameTrackerReference.h
dsm/src/Utils/: EigenTypes.h  EurocReader.cpp  EurocReader.h  GlobalCalibration.cpp  GlobalCalibration.h  Interpolation.h  Kernel.h  LossFunction.h  Projection.h  Settings.cpp  Settings.h  Undistorter.cpp  Undistorter.h  UtilFunctions.h  sse.h
dsm/src/Visualizer/: IVisualizer.cpp  IVisualizer.h
